[gd_scene load_steps=9 format=3 uid="uid://b2mk0ynh353s3"]

[ext_resource type="Script" path="res://script/menu_arene/menu_arene.gd" id="1_qjprd"]
[ext_resource type="FontFile" uid="uid://g165ow287dwf" path="res://font/Oswald-Regular.ttf" id="2_8dmjj"]
[ext_resource type="Texture2D" uid="uid://bwo7mvljg7tx3" path="res://images/Menus/background/background_combat_pierre.png" id="3_dvvfl"]
[ext_resource type="Texture2D" uid="uid://d0jmg7dmh24rp" path="res://images/Menus/background/background_combat_space.png" id="5_kimjs"]
[ext_resource type="Texture2D" uid="uid://ceefykq248ypt" path="res://images/Menus/background/background_combat_sand.png" id="6_gx686"]
[ext_resource type="Texture2D" uid="uid://mxrm0grinnc6" path="res://images/Menus/background/background_combat_dark.png" id="6_o3eyc"]
[ext_resource type="AudioStream" uid="uid://b3fidng2l6ypf" path="res://sons/effets_sonores/selection.MP3" id="12_qe6re"]
[ext_resource type="AudioStream" uid="uid://d050cbfesnpfl" path="res://sons/effets_sonores/survolement .MP3" id="14_fjmrm"]

[node name="MenuArena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjprd")

[node name="background_menu_arene" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(573.5, 321.5)
scale = Vector2(5.835, 4.44667)
texture = ExtResource("3_dvvfl")

[node name="label_player1" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = -6.0
offset_top = -5.0
offset_right = 1152.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_8dmjj")
theme_override_font_sizes/font_size = 50
text = "Choose your Arena"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -224.0
offset_right = 658.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
columns = 4
metadata/_edit_group_ = true

[node name="Panel_area1" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="spr_background1" type="Sprite2D" parent="GridContainer/Panel_area1"]
texture_filter = 1
position = Vector2(148, 122)
texture = ExtResource("3_dvvfl")

[node name="Label" type="Label" parent="GridContainer/Panel_area1"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 44.0
text = "Stone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel_area2" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="spr_background2" type="Sprite2D" parent="GridContainer/Panel_area2"]
texture_filter = 1
position = Vector2(148, 122)
texture = ExtResource("5_kimjs")

[node name="Label" type="Label" parent="GridContainer/Panel_area2"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 44.0
text = "Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel_area3" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="spr_background3" type="Sprite2D" parent="GridContainer/Panel_area3"]
texture_filter = 1
position = Vector2(148, 122)
texture = ExtResource("6_gx686")

[node name="Label" type="Label" parent="GridContainer/Panel_area3"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 44.0
text = "Sand"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel_area4" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="spr_background4" type="Sprite2D" parent="GridContainer/Panel_area4"]
texture_filter = 1
position = Vector2(148, 122)
texture = ExtResource("6_o3eyc")

[node name="Label" type="Label" parent="GridContainer/Panel_area4"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 44.0
text = "darkness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_menu" type="Button" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_8dmjj")
theme_override_font_sizes/font_size = 50
text = "<"

[node name="audio_selection" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_qe6re")

[node name="audio_survolement" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_fjmrm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 350.0
offset_right = 575.0
offset_bottom = 406.0
scale = Vector2(2, 2)
alignment = 1

[node name="Button_start" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "multiplayer"

[node name="Button_start_solo" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "singleplayer"

[node name="play_btn" type="Button" parent="."]
layout_mode = 2
offset_left = 358.0
offset_top = 481.0
offset_right = 790.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_8dmjj")
theme_override_font_sizes/font_size = 80
text = "PLAY"

[connection signal="gui_input" from="GridContainer/Panel_area1" to="." method="_on_panel_area_1_gui_input"]
[connection signal="mouse_entered" from="GridContainer/Panel_area1" to="." method="_on_panel_area_1_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Panel_area1" to="." method="_on_panel_area_1_mouse_exited"]
[connection signal="gui_input" from="GridContainer/Panel_area2" to="." method="_on_panel_area_2_gui_input"]
[connection signal="mouse_entered" from="GridContainer/Panel_area2" to="." method="_on_panel_area_2_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Panel_area2" to="." method="_on_panel_area_2_mouse_exited"]
[connection signal="gui_input" from="GridContainer/Panel_area3" to="." method="_on_panel_area_3_gui_input"]
[connection signal="mouse_entered" from="GridContainer/Panel_area3" to="." method="_on_panel_area_3_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Panel_area3" to="." method="_on_panel_area_3_mouse_exited"]
[connection signal="gui_input" from="GridContainer/Panel_area4" to="." method="_on_panel_area_3_gui_input"]
[connection signal="mouse_entered" from="GridContainer/Panel_area4" to="." method="_on_panel_area_3_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Panel_area4" to="." method="_on_panel_area_3_mouse_exited"]
[connection signal="pressed" from="btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_start_solo" to="." method="_on_button_start_solo_pressed"]
[connection signal="pressed" from="play_btn" to="." method="_on_play_btn_pressed"]
